# spot-optimizer

./: .gitignore  .pre-commit-config.yaml  .python-version  Makefile  README.md  pyproject.toml  test_custom_exceptions.py
.devcontainer/: devcontainer.json
.github/workflows/: benchmark.yml  publish-build.yml  python-tests.yml  update-metadata.yml
scripts/: generate_instance_metadata.py
spark_cluster_optimiser/: __init__.py  aws_spot_advisor_cache.py  cli.py  optimiser_mode.py  spark_cluster_optimiser.py  spot_advisor_cache.py  spot_advisor_engine.py
spark_cluster_optimiser/spot_advisor_data/: aws_spot_advisor_cache.py
spark_cluster_optimiser/storage_engine/: duckdb_storage.py  storage_engine.py
spot_optimizer/: __init__.py  cli.py  config.py  exceptions.py  logging_config.py  optimizer_mode.py  spark_cluster_optimiser.py  spot_advisor_engine.py  spot_instance_optimizer.py  spot_optimizer.py  spot_optimizer_core.py  validators.py
spot_optimizer/resources/: instance_metadata.json
spot_optimizer/spot_advisor_data/: aws_spot_advisor_cache.py
spot_optimizer/storage_engine/: duckdb_storage.py  duckdb_storage_engine.py  storage_engine.py
tests/: README.md  test_cli.py  test_cluster_optimiser.py  test_config.py  test_integration.py  test_optimizer_mode.py  test_query_builder.py  test_spot_advisor_cache.py  test_spot_advisor_engine.py  test_spot_optimizer.py  test_spot_optimizer_core.py  test_spot_optimizer_facade.py  test_validators.py
tests/performance/: benchmark_queries.py  generate_test_data.py  run_benchmark.sh
tests/spot_advisor_data/: test_aws_spot_advisor_cache.py
tests/storage_engine/: test_duckdb_storage_engine.py  test_storage_engine.py
