[tool.poetry]
name = "spot-optimizer"
version = "0.1.0"
description = "Help you get the best spot instance given the resource requirements"
authors = ["Amar Prakash Pandey <@amarlearning>"]
readme = "README.md"
packages = [{include = "spot_optimizer"}]

[tool.poetry.dependencies]
python = "^3.10.14"
requests = "^2.32.3"
diskcache = "^5.6.3"
appdirs = "^1.4.4"
duckdb = "^1.1.3"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^23.1.0"
isort = "^5.10.1"
pre-commit = "^4.0.1"
types-requests = "^2.32.0.20241016"

[tool.black]
line-length = 80
target-version = ['py310']

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
spot-optimiser = "spot_optimizer.cli:main"