[tool.poetry]
name = "spot-optimizer"
version = "1.0.0"
description = "AWS EC2 spot instance optimizer"
authors = ["Amar Prakash Pandey <@amarlearning>"]
readme = "README.md"
repository = "https://github.com/amarlearning/spot-optimizer"
keywords = ["aws", "ec2", "spot", "optimizer"]
packages = [
    { include = "spot_optimizer" },
    { include = "spot_optimizer/resources/*.json" }
]

[tool.poetry.dependencies]
python = ">=3.10"
requests = "^2.32.3"
diskcache = "^5.6.3"
appdirs = "^1.4.4"
duckdb = "^1.1.3"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^23.1.0"
isort = "^5.10.1"
pre-commit = "^4.0.1"
types-requests = "^2.32.0.20241016"
pytest-cov = "^4.1.0" 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
spot-optimizer = "spot_optimizer.cli:main"