[tool.poetry]
name = "spot-optimizer"
version = "1.1.0"
description = "AWS EC2 spot instance optimizer"
authors = ["Amar Prakash <amar.om1994@gmail.com>"]
readme = "README.md"
repository = "https://github.com/amarlearning/spot-optimizer"
keywords = ["aws", "ec2", "spot", "optimizer"]
packages = [
    { include = "spot_optimizer" },
    { include = "spot_optimizer/resources/*.json" }
]

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.32.3"
diskcache = "^5.6.3"
appdirs = "^1.4.4"
duckdb = "^1.1.3"
pandas = "^2.2.0"
boto3 = "^1.34.0"
urllib3 = "<2.0.0"  # Required for boto3 compatibility
tqdm = "^4.66.1"  # For progress bars

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^4.1.0"

[tool.poetry.group.types.dependencies]
types-requests = "^2.31.0"  # Using an older version for compatibility


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
spot-optimizer = "spot_optimizer.cli:main"